Fix for horizontal overflow on iPHone

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -13,7 +13,6 @@ h1, .form {
 
 body {
   background: #f7f7f7;
-  overflow-x: hidden;
   > .row {
     @media #{$medium-up} {
       padding: 20px;
